Teacher list screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
       - asset/icons/facebook.png
       - asset/icons/google.png
       - asset/icons/mobilephone.png
+      - asset/images/avatar.png
+      - asset/images/france.png
+      - asset/icons/love.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
