--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
       - asset/icons/love.png
       - asset/images/video.jpg
       - asset/images/English.jpg
+      - asset/images/myaccount.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
