Favourite, message interactions, history, schedule, Course and course specifications, edit profile, settings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
       - asset/images/video.jpg
       - asset/images/English.jpg
       - asset/images/myaccount.png
+      - asset/icons/fill_heart.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
