--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,8 @@ dependencies:
   provider: ^6.1.1
   syncfusion_flutter_calendar: ^23.1.44
   intl: ^0.18.1
-
+  http: ^1.1.0
+  country_flags: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
