--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.18.1
   http: ^1.1.0
   country_flags: ^2.2.0
+  syncfusion_flutter_pdfviewer: ^23.2.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
