--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.0
   country_flags: ^2.2.0
   syncfusion_flutter_pdfviewer: ^23.2.7
+  cached_network_image: ^3.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
