--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,12 +45,20 @@ android {
         applicationId "com.example.lettutor"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
 
+    signingConfigs{
+        debug{
+            keyAlias 'upload'
+            storePassword '123456'
+            storeFile file('login-key.jks')
+            keyPassword '123456'
+        }
+    }
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
