--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   async: ^2.11.0
   path: ^1.8.3
   flutter_rating_bar: ^4.0.1
+  google_sign_in: ^6.1.6
+  flutter_facebook_auth: ^6.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
