--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@ xmlns:tools="http://schemas.android.com/tools">
     <provider android:authorities="com.facebook.katana.provider.PlatformProvider" />
 </queries>
     <application
+        tools:replace="android:label"
         android:label="lettutor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
